--- a/02-scripts.backup/MID_sub_betadiv_75bp.Rmd
+++ b/02-scripts.backup/MID_sub_betadiv_75bp.Rmd
@@ -106,7 +106,7 @@ full_metadata <- full_metadata %>%
 plot_pca_names <- function(df, pc1, pc2, metadata_group) {
     metadata_group_colors <- get(paste(metadata_group, "_colors", sep = ""))
 
-    exp_var <- paste0(round(df$explained_variance * 100, 2), "%")
+    exp_var <- paste0(round(df$prop_expl_var$X * 100, 2), "%")
     df_X <- df$variates$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
@@ -168,7 +168,7 @@ plot_pca <- function(df, pc1, pc2, color_group, shape_group, ncomps) {
 
     pca.list <- mixOmics::pca(df, ncomp = ncomps, logratio = 'CLR')
 
-    exp_var <- paste0(round(pca.list$explained_variance * 100, 2), "%")
+    exp_var <- paste0(round(pca.list$prop_expl_var$X * 100, 2), "%")
     df_X <- pca.list$variates$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
@@ -230,7 +230,7 @@ plot_pca_mid <- function(df, pc1, pc2, color_group, shape_group, ncomps, title_t
 
     pca.list <- mixOmics::pca(df, ncomp = ncomps, logratio = 'CLR')
 
-    exp_var <- paste0(round(pca.list$explained_variance * 100, 2), "%")
+    exp_var <- paste0(round(pca.list$prop_expl_var$X * 100, 2), "%")
     df_X <- pca.list$variates$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
@@ -293,7 +293,7 @@ plot_pca_cont <- function(df, pc1, pc2, color_group, shape_group, ncomps, title_
 
     pca.list <- mixOmics::pca(df, ncomp = ncomps, logratio = 'CLR')
 
-    exp_var <- paste0(round(pca.list$explained_variance * 100, 2), "%")
+    exp_var <- paste0(round(pca.list$prop_expl_var$X * 100, 2), "%")
     df_X <- pca.list$variates$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
@@ -361,7 +361,7 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
    
     arrow_pc <- enquo(columntitle)
     
-    exp_var <- paste0(round(df$explained_variance * 100, 2), "%") # explained variance for x- and y-labels
+    exp_var <- paste0(round(df$prop_expl_var$X * 100, 2), "%") # explained variance for x- and y-labels
     
     # select only the PCs from the PCA and add metadata
     df_X <- df$variates$X %>%
@@ -657,8 +657,8 @@ all_seqdepth_pc12 <- malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 3) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Seq. depth\n(reads)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -673,8 +673,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 3) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Log10\n(Seq. depth)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -685,8 +685,8 @@ all_extract_pc12 <- malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 3) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "[DNA Extract]\n(ng/uL)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -701,8 +701,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 3) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "[DNA Extract]\n(ng/uL) - log10", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -713,8 +713,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2.5) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Avg. GC content (%)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -725,8 +725,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2.5) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Avg. read length (bp)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -737,8 +737,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2.5) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Avg. mapped GC content (%)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -749,8 +749,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2.5) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Avg. mapped read length (bp)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -789,8 +789,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Seq. depth\n(reads)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -801,8 +801,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Log10\n(Seq. depth)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -813,8 +813,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "[DNA Extract]\n(ng/uL)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -826,8 +826,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "[DNA Extract]\n(ng/uL) - log10", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -838,8 +838,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2.5) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Avg. GC content (%)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -850,8 +850,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2.5) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Avg. read length (bp)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -862,8 +862,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2.5) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Avg. mapped GC content (%)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
@@ -874,8 +874,8 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     geom_point(size = 2.5) +
     scale_shape_manual(values = Time_period_shapes) +
     scale_color_viridis_c(option = "A") +
-    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
-    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
     theme_minimal(base_size = 14) +
     labs(colour = "Avg. mapped read length (bp)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
