--- a/02-scripts.backup/MID_Strep_groups.Rmd
+++ b/02-scripts.backup/MID_Strep_groups.Rmd
@@ -25,29 +25,44 @@ notebook itself.
 knitr::opts_knit$set(root.dir = normalizePath(".."))
 ```
 
-```{r}
+```{r strep_groups}
 # read in the Strep group table James made for the Deep Evo project
 
 strep_groups <- fread("./00-documentation.backup/25-streptococcus_cladegroup_amylasegroup_database.tsv") %>%
   select(Taxon, Clade_Consensus) %>%
   rename(Species = Taxon) %>%
-  mutate(Species = str_replace_all(Species, "_", " ")) %>%
-  mutate(Clade_Consensus = fct_relevel(Clade_Consensus, "sanguinis","mitis","salivarius","anginosus","bovis","pyogenic","mutans","unknown","NA"))
+  mutate(Species = str_replace_all(Species, "_", " "),
+         Clade_Consensus = str_replace_all(Clade_Consensus, "NA","Unknown"),
+         Clade_Consensus = str_replace_all(Clade_Consensus, "sanguinis","Sanguinis"),
+         Clade_Consensus = str_replace_all(Clade_Consensus, "mitis","Mitis"),
+         Clade_Consensus = str_replace_all(Clade_Consensus, "salivarius","Salivarius"),
+         Clade_Consensus = str_replace_all(Clade_Consensus, "anginosus","Anginosus"),
+         Clade_Consensus = str_replace_all(Clade_Consensus, "bovis","Bovis"),
+         Clade_Consensus = str_replace_all(Clade_Consensus, "pyogenic","Pyogenic"),
+         Clade_Consensus = str_replace_all(Clade_Consensus, "mutans","Mutans")) %>%
+  mutate(Clade_Consensus = fct_relevel(Clade_Consensus, "Sanguinis","Mitis","Salivarius","Anginosus","Bovis","Pyogenic","Mutans","Unknown"))
 
 ```
+
+```{r metadata}
+
+load("./05-results.backup/Metadata_tables.RData")
+
+```
+
 
 ```{r}
 # set colors to resemble James' figure
 
-clade_colors <- c("sanguinis" = "#a50026",
-                  "mitis" = "#d73027",
-                  "salivarius" = "#f46d43",
-                  "anginosus" = "#fee090",
-                  "pyogenic" = "#74add1",
-                  "mutans" = "#4575b4",
-                  "bovis" = "#abd9e9",
-                  "unknown" = "#313695",
-                  "NA" = "grey50")
+clade_colors <- c("Sanguinis" = "#a50026",
+                  "Mitis" = "#d73027",
+                  "Salivarius" = "#f46d43",
+                  "Anginosus" = "#fee090",
+                  "Bovis" = "#abd9e9",
+                  "Pyogenic" = "#74add1",
+                  "Mutans" = "#4575b4",
+                  # "NA" = "#313695",
+                  "Unknown" = "grey50")
 
 genus_colors <- c("Streptococcus" = "#a50026", "Other" = "#313695")
 
@@ -77,9 +92,42 @@ malt_rs <- all_species_decontam_prev %>%
 
 ```
 
+First do a PCA to get the order of samples in the horseshoe
+```{r pca_rs}
+# prep the table
+
+outliers <- c("EXB059.A2501","LIB058.A0103","LIB058.A0106","CSS","CSD")
+poor_samples <- fread("./05-results.backup/cuperdec_poor_samples.tsv") %>%
+  pull(Sample)
+
+malt_otu_pca_table <- malt_rs %>%
+  select(-one_of(outliers)) %>%
+  gather("Library_ID","Counts",2:ncol(.)) %>%
+  mutate(Counts = Counts + 1) %>%
+  spread(Species, Counts) %>%
+  column_to_rownames("Library_ID")
+
+# perform a PCA to see how the data cluster
+malt_otu.pca <- mixOmics::pca(malt_otu_pca_table, ncomp = 2, logratio = 'CLR')
+malt_pca_values <- malt_otu.pca$variates$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  inner_join(., full_metadata, by = "Library_ID")
+
+mid_pc1_sample_order <- malt_pca_values %>%
+  arrange(PC1) %>%
+  pull(Library_ID)
+
+ggplot(malt_pca_values, aes(PC1, PC2, color = Region, shape = Region)) +
+  geom_text(aes(label = Library_ID), size = 3) +
+  theme_minimal()
+
+```
+
+
 ```{r malt_rs_graphs}
 
-# set the order of samples based on proportion of sanguinis and agninosis
+# set the order of samples based on proportion of Sanguinis and agninosis
 # need to get the proportion of each for this
 # then arrange by proportion
 
@@ -98,8 +146,8 @@ sample_order_rs <- malt_rs  %>%
   spread(Clade_Consensus, Reads) %>%
   # convert table to proportions
   adorn_percentages(denominator = "row") %>%
-  # arrange by sanguinis and for the ones w/o sanguinis, by anginosis
-  arrange(desc(sanguinis), anginosus)%>%
+  # arrange by Sanguinis and for the ones w/o Sanguinis, by Anginosus
+  arrange(desc(Sanguinis), Anginosus)%>%
   pull(Library_ID)
 
 
@@ -120,6 +168,7 @@ malt_rs %>%
          theme(axis.text.x = element_text(angle = 90, hjust = 1),
                axis.text = element_text(size = 8)) +
          # scale_y_continuous(breaks=scales::pretty_breaks(n=6)) +
+         geom_hline(yintercept = 0.5, linetype = "dotted") +
          ylab("Proportion Strep group") +
          ggtitle("")
 
@@ -133,6 +182,34 @@ sample_order_rs %>%
 fwrite(., "./05-results.backup/malt_rs_Strep_group_order.tsv", sep = "\t", quote = F)
 
 ```
+
+```{r}
+
+#plot ordered by horseshoe
+malt_rs %>%
+  filter(str_detect(Species, "Streptococcus")) %>%
+  # join with the Strep grup table for plotting
+  inner_join(., strep_groups) %>%
+  select(Species, Clade_Consensus, everything()) %>%
+  # convert to long-format
+  gather("Library_ID","Counts", 3:ncol(.)) %>%
+  mutate(Library_ID = fct_relevel(Library_ID, mid_pc1_sample_order)) %>%
+  mutate(Library_ID = fct_rev(Library_ID)) %>%
+  dplyr::group_by(Library_ID, Clade_Consensus) %>%
+  summarize(Count_sum = sum(Counts)) %>%
+  ggplot(., aes(x = Library_ID, y = Count_sum, fill = Clade_Consensus)) +
+         geom_bar(position = "fill", stat = "identity") + # , color = "black"
+         theme_minimal(base_size = 14) +
+         scale_fill_manual(values = clade_colors) +
+         theme(axis.text.x = element_text(angle = 90, hjust = 1),
+               axis.text = element_text(size = 8)) +
+         # scale_y_continuous(breaks=scales::pretty_breaks(n=6)) +
+         ylab("Proportion Strep group") +
+         ggtitle("")
+
+
+```
+
 
 ```{r rs_strep_proportion}
 
@@ -209,6 +286,39 @@ malt_nt <- nt_species_decontam %>%
 
 ```
 
+
+```{r pca_nt}
+
+# prep the table
+
+malt_otu_pca_table_nt <- malt_nt %>%
+  select(-one_of(outliers)) %>%
+  gather("Library_ID","Counts",2:ncol(.)) %>%
+  mutate(Counts = Counts + 1) %>%
+  spread(Species, Counts) %>%
+  column_to_rownames("Library_ID")
+
+# perform a PCA to see how the data cluster
+malt_otu_nt.pca <- mixOmics::pca(malt_otu_pca_table_nt, ncomp = 2, logratio = 'CLR')
+malt_pca_values_nt <- malt_otu_nt.pca$variates$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  inner_join(., full_metadata, by = "Library_ID")
+
+mid_pc1_sample_order_nt <- malt_pca_values_nt %>%
+  arrange(PC1) %>%
+  pull(Library_ID)
+
+ggplot(malt_pca_values_nt, aes(PC1, PC2, color = Region, shape = Region)) +
+  geom_text(aes(label = Library_ID), size = 3) +
+  theme_minimal()
+
+
+```
+
+
+
+
 ```{r}
 
 sample_order_nt <- malt_nt %>%
@@ -224,8 +334,8 @@ sample_order_nt <- malt_nt %>%
   spread(Clade_Consensus, Reads) %>%
   # convert table to proportions
   adorn_percentages(denominator = "row") %>%
-  # arrange by sanguinis and for the ones w/o sanguinis, by anginosis
-  arrange(desc(sanguinis), anginosus) %>%
+  # arrange by Sanguinis and for the ones w/o Sanguinis, by anginosis
+  arrange(desc(Sanguinis), Anginosus) %>%
   pull(Library_ID)
 
 
@@ -256,7 +366,7 @@ plot_nt
 
 ```
 
-```{r save_nt_order}
+```{r save_nt_order, eval = F}
 
 sample_order_nt %>%
   as.data.frame(.) %>%
@@ -264,6 +374,32 @@ sample_order_nt %>%
 fwrite(., "./05-results.backup/malt_nt_Strep_group_order.tsv", sep = "\t", quote = F)
 
 ```
+
+```{r}
+#plot ordered by horseshoe
+malt_nt %>%
+  filter(str_detect(Species, "Streptococcus")) %>%
+  # join with the Strep grup table for plotting
+  inner_join(., strep_groups) %>%
+  select(Species, Clade_Consensus, everything()) %>%
+  # convert to long-format
+  gather("Library_ID","Counts", 3:ncol(.)) %>%
+  mutate(Library_ID = fct_relevel(Library_ID, mid_pc1_sample_order_nt)) %>%
+  mutate(Library_ID = fct_rev(Library_ID)) %>%
+  dplyr::group_by(Library_ID, Clade_Consensus) %>%
+  summarize(Count_sum = sum(Counts)) %>%
+  ggplot(., aes(x = Library_ID, y = Count_sum, fill = Clade_Consensus)) +
+         geom_bar(position = "fill", stat = "identity") + # , color = "black"
+         theme_minimal(base_size = 14) +
+         scale_fill_manual(values = clade_colors) +
+         theme(axis.text.x = element_text(angle = 90, hjust = 1),
+               axis.text = element_text(size = 8)) +
+         # scale_y_continuous(breaks=scales::pretty_breaks(n=6)) +
+         ylab("Proportion Strep group") +
+         ggtitle("")
+
+```
+
 
 ```{r nt_strep_proportion}
 
@@ -304,7 +440,7 @@ Note that MetaPhlAn3 didn't pick up any strep outside of sanguinis and mitis
 groups. This means that for several samples, no Strep were detected.
 ```{r load_mpa3_data}
 # read in the species table
-mpa3_raw <- fread("./05-results.backup/abundance_table_mpa3.tsv") %>%
+mpa3_raw <- fread("./05-results.backup/mpa3_abundance_table.tsv") %>%
   select(-NCBI_tax_id)
 
 # clean the file names
@@ -358,8 +494,8 @@ sample_order_mpa3 <- mpa3 %>%
   spread(Clade_Consensus, Reads) %>%
   # convert table to proportions
   adorn_percentages(denominator = "row") %>%
-  # arrange by sanguinis and for the ones w/o sanguinis, by anginosis
-  arrange(desc(sanguinis)) %>%
+  # arrange by Sanguinis and for the ones w/o Sanguinis, by anginosis
+  arrange(desc(Sanguinis)) %>%
   pull(Library_ID)
 
 
@@ -385,7 +521,38 @@ mpa3 %>%
 
 ```
 
-```{r save_mpa3_order}
+
+
+```{r mpa3_strep_proportion}
+
+strep_prop_mpa3 <- mpa3_raw %>%
+  filter(str_detect(clade_name, "g__"),
+         !str_detect(clade_name, "s__")) %>%
+  filter(str_detect(clade_name, "Streptococcus")) %>%
+  pivot_longer(!clade_name, names_to = "Library_ID", values_to = "Streptococcus") %>%
+  mutate(Other = 100 - Streptococcus) %>%
+  select(-clade_name) %>%
+  filter(str_detect(Library_ID, "MID|CMB")) %>%
+  pivot_longer(!Library_ID, names_to = "Genus", values_to = "Percent")
+
+
+strep_prop_mpa3 %>%
+  filter(!str_detect(Library_ID, "MID025.A0101|MID033.A0101|MID052.A0101|MID056.A0101|MID065.A0101|MID068.A0101|MID076.A0101|MID078.A0101")) %>%
+  mutate(Library_ID = fct_relevel(Library_ID, sample_order_mpa3)) %>%
+  arrange(Library_ID) %>%
+  ggplot(., aes(x = Library_ID, y = Percent, fill = Genus)) +
+         geom_bar(stat = "identity") + # , color = "black"
+         theme_minimal(base_size = 14) +
+         scale_fill_manual(values = genus_colors) +
+         theme(axis.text.x = element_text(angle = 90, hjust = 1),
+               axis.text = element_text(size = 8)) +
+         # scale_y_continuous(breaks=scales::pretty_breaks(n=6)) +
+         ylab("Proportion Strep group") +
+         ggtitle("")
+
+```
+
+```{r save_mpa3_order, eval = F}
 
 sample_order_mpa3 %>%
   as.data.frame(.) %>%
@@ -393,5 +560,26 @@ sample_order_mpa3 %>%
 fwrite(., "./05-results.backup/mpa_Strep_group_order.tsv", sep = "\t", quote = F)
 
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
