--- a/02-scripts.backup/MID_mpa3_betadiv.Rmd
+++ b/02-scripts.backup/MID_mpa3_betadiv.Rmd
@@ -39,11 +39,12 @@ knitr::opts_knit$set(root.dir = normalizePath(".."))
 
 ```{r load_data}
 # read in the species table
-mpa3_raw <- fread("./05-results.backup/abundance_table_mpa3.tsv") %>%
+mpa3_raw <- fread("./05-results.backup/mpa3_abundance_table.tsv") %>%
   select(-NCBI_tax_id)
 
 # clean the file names
 colnames(mpa3_raw) <- gsub(".metaphlan3","", colnames(mpa3_raw))
+colnames(mpa3_raw) <- gsub(".SG1","", colnames(mpa3_raw))
 
 # filter to have only species
 mpa3_sp <- mpa3_raw %>% 
@@ -123,7 +124,7 @@ colnames(malt_map_unmap_rl_gc) <- gsub("_unmap","_malt_unmap", colnames(malt_map
 plot_pca_names <- function(df, pc1, pc2, metadata_group) {
     metadata_group_colors <- get(paste(metadata_group, "_colors", sep = ""))
 
-    exp_var <- paste0(round(df$explained_variance * 100, 2), "%")
+    exp_var <- paste0(round(df$prop_expl_var$X * 100, 2), "%")
     df_X <- df$variates$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
@@ -186,7 +187,7 @@ plot_pca <- function(df, pc1, pc2, color_group, shape_group, ncomps) {
 
     pca.list <- mixOmics::pca(df, ncomp = ncomps, logratio = 'CLR')
 
-    exp_var <- paste0(round(pca.list$explained_variance * 100, 2), "%")
+    exp_var <- paste0(round(pca.list$prop_expl_var$X * 100, 2), "%")
     df_X <- pca.list$variates$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
@@ -249,7 +250,7 @@ plot_pca_mid <- function(df, pc1, pc2, color_group, shape_group, ncomps, title_t
 
     pca.list <- mixOmics::pca(df, ncomp = ncomps, logratio = 'CLR')
 
-    exp_var <- paste0(round(pca.list$explained_variance * 100, 2), "%")
+    exp_var <- paste0(round(pca.list$prop_expl_var$X * 100, 2), "%")
     df_X <- pca.list$variates$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
@@ -312,7 +313,7 @@ plot_pca_cont <- function(df, pc1, pc2, color_group, shape_group, ncomps, title_
 
     pca.list <- mixOmics::pca(df, ncomp = ncomps, logratio = 'CLR')
 
-    exp_var <- paste0(round(pca.list$explained_variance * 100, 2), "%")
+    exp_var <- paste0(round(pca.list$prop_expl_var$X * 100, 2), "%")
     df_X <- pca.list$variates$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
@@ -356,7 +357,7 @@ plot_pca_cont <- function(df, pc1, pc2, color_group, shape_group, ncomps, title_
     pca_plot <- ggplot(df_X, aes(pc1, pc2, colour = color_group, shape = shape_group)) +
      geom_point(size = 2) +
      scale_colour_viridis_c(option = "C") +
-     scale_shape_manual(values = c(16, 17, 15, 18, 14,9)) +
+     scale_shape_manual(values = c(16, 17, 15, 18, 14,9,13,24)) +
      # stat_ellipse() +
      xlab(paste(xaxis, " - ", exp_var_pc1)) +
      ylab(paste(yaxis, " - ", exp_var_pc2)) +
@@ -381,7 +382,7 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
    
     arrow_pc <- enquo(columntitle)
     
-    exp_var <- paste0(round(df$explained_variance * 100, 2), "%") # explained variance for x- and y-labels
+    exp_var <- paste0(round(df$prop_expl_var$X * 100, 2), "%") # explained variance for x- and y-labels
     
     # select only the PCs from the PCA and add metadata
     df_X <- df$variates$X %>%
@@ -449,7 +450,7 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
                    arrow = arrow(length = unit(0.03, "npc"))) +
       geom_label_repel(data = pws_10,
                    aes(x = get(paste(pc1)), y = get(paste(pc2)), label = Taxon),
-                   size = 2.5, colour = "grey20", label.padding = 0.2) +
+                   size = 2.5, colour = "grey20", label.padding = 0.2, force = 5) +
       geom_segment(data = neg_10,
                    aes(xend = get(paste(pc1)), yend = get(paste(pc2))),
                    x = 0, y = 0, colour = "grey50",
@@ -482,7 +483,7 @@ plot_pca_bi_lm <- function(df, metadata_table, pc1, pc2, metadata_group, columnt
    
     arrow_pc <- enquo(columntitle)
     
-    exp_var <- paste0(round(df$explained_variance * 100, 2), "%") # explained variance for x- and y-labels
+    exp_var <- paste0(round(df$prop_expl_var$X * 100, 2), "%") # explained variance for x- and y-labels
     
     # select only the PCs from the PCA and add metadata
     df_X <- df$variates$X %>%
@@ -609,7 +610,9 @@ mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
 tune.pca(mpa3_species_decontam_unfilt, logratio = 'CLR')
 
 # perform and plot a PCA to see how the data cluster
-plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2", "Site", "Time_period", 3)
+pc1pc2 <- plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2", "Site", "Time_period", 3)
+pc1pc2
+
 plot_pca(mpa3_species_decontam_unfilt, "PC3", "PC2", "Site", "Time_period", 3)
 
 
@@ -740,17 +743,22 @@ mpa3_all_pca_values <- mpa3_all_otu.pca$variates$X %>%
   rownames_to_column("Library_ID") %>%
   inner_join(., full_metadata, by = "Library_ID")
 
-ggplot(mpa3_all_pca_values, aes(PC1, PC2, color = Region, shape = Region)) +
-  geom_point(size = 2) +
-  geom_text(aes(label = Library_ID), size = 3) +
-  theme_minimal() +
-  scale_color_manual(values = Region_colors)
+# ggplot(mpa3_all_pca_values, aes(PC1, PC2, color = Site, shape = Time_period)) +
+#   geom_point(size = 2) +
+#   # geom_text(aes(label = Library_ID), size = 3) +
+#   theme_minimal() +
+#   scale_color_manual(values = Site_colors) +
+#      theme(legend.position = "top")
+
+plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2","Time_period","Time_period", 3) 
+plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2","Site","Time_period", 3) 
 
 # check if the Radliffe samples separate by characteristics of the calculus deposits, Deposit_density, Deposit_location, Deposit_spread
 ggplot(mpa3_all_pca_values, aes(PC1, PC2, color = Deposit_spread, shape = Region)) +
   geom_point(size = 2) +
   # geom_text(aes(label = Library_ID), size = 3) +
-  theme_minimal() 
+  theme_minimal()  +
+  theme(legend.position = "top")
 
 # perform and plot a PCA to see how the data cluster
 # by sequencing depth 
@@ -760,14 +768,14 @@ mid_seqdepth_pc12
 #        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by average GC content
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "gc_avg", "Site", 3, "Avg. GC content (%)")
+plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "gc_avg", "Time_period", 3, "Avg. GC content (%)")
 
 # by average read length
 plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "seq_len_avg", "Time_period", 3, "Avg. read length (bp)")
 
 ```
 
-```{r}
+```{r, eval = F}
 # linear modeling to control for GC content along PC2
 # by Ainash
 
@@ -782,9 +790,12 @@ model <- lm(PC2 ~ gc_avg , data = mpa3_all_pca_values)
 
 resid(model)
 
-pc2_resid <- as.data.frame(model$residuals)
+pc2_resid <- as.data.frame(model$residuals) %>%
+  rename(pc2_residuals = `model$residuals`)
 
-ggplot(mpa3_all_pca_values, aes(PC1, pc2_residuals, colour = gc_avg, shape = Site, size = Site)) +
+mpa3_all_pca_values %>%
+  bind_cols(., pc2_resid) %>%
+ggplot(., aes(PC1, pc2_resid, colour = gc_avg, shape = Site, size = Site)) +
   geom_point() +
   scale_shape_manual(values = Site_shapes) +
   scale_colour_viridis_c(option = "C") +
@@ -803,7 +814,7 @@ ggplot(mpa3_all_pca_values, aes(PC1, pc2_residuals, colour = gc_avg, shape = Sit
 
 ```
 
-```{r}
+```{r, eval = F}
 
 # Extract coordinates from mixOmics object and convert into long table dataframe
 mpa3_all_pca_values_short <- mpa3_all_pca_values %>%
@@ -857,9 +868,6 @@ residuals_pc2_plot_bi
 ```
 
 ## Middenbeemster samples only
-What is the relationship of Cameroon plaque samples to eachother without any
-other sample types? Do they cluster by any of the metadata categories?
-Filter the species table by % abundance
 ```{r pca_species_mid_pc12}
 mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
   select(-one_of(outliers_mpa3)) %>%
